test_programs/compile_failure/for_loop_range_type_mismatch/src/main.nr
fn main() {
    // Range bounds must have the same type
    comptime {
        for _ in 1_i8..2_u8 {}
    }
}
